name:                habi
version:             0.1.0.0
description:         bittorrent client with end-to-end encryption
license:             MIT
license-file:        LICENSE
author:              Reto Hablützel
maintainer:          rethab@rethab.ch
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
  exposed-modules:     Habi
  other-modules:       Habi.Crypto
                     , Habi.Types
                     , Habi.Handshake
  build-depends:       base >=4.7 && <4.8
                     , network >=2.5 && <2.6
                     , bytestring >=0.10 && <0.11
                     , mtl >=2.2 && <2.3
                     , transformers >=0.4 && <0.5
                     , binary >=0.7 && <0.8
                     , cryptocipher >=0.6 && <0.7
                     , h-gpgme >=0.1 && <0.2
                     , random >=1.0 && <1.1

test-suite tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      src, test
  main-is:             TestMain.hs
  build-depends:       base         >=4.7 && <4.8
                     , network      >=2.5 && <2.6
                     , bytestring   >=0.10 && <0.11
                     , mtl          >=2.2 && <2.3
                     , transformers >=0.4 && <0.5
                     , binary       >=0.7 && <0.8
                     , cryptocipher >=0.6 && <0.7
                     , h-gpgme      >=0.1 && <0.2
                     , random       >=1.0 && <1.1

                     , QuickCheck                 >=2.7 && <2.8
                     , HUnit                      == 1.2.*
                     , test-framework             >=0.8 && <0.9
                     , test-framework-hunit       >=0.3 && <0.4
                     , test-framework-quickcheck2 >=0.3 && <0.4
                     , directory                  == 1.2.*
                     , filepath                   == 1.3.*
